# ironflow

./: .env.example  .pg_format  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  docker-compose.yml  rust-toolchain.toml
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: ci.yaml  ci.yml
.sqlx/: query-2798cf4569c03d96e64477aa9718673f8c5edc5b0c036b82ae8472f4e0e99978.json  query-3b28fb86313ad1927434f6369d038c90ee818c57c0da7a44aaa78c3e6483bcaa.json  query-64f2500252a363f7f3803e94c66d45947aa88557e4bce1a6367672516c76f7c8.json  query-77639a234d9b15104e922df08e54025d9d82b8061c7a533c53f3e8aa897a3c90.json  query-95880029af666a1407619797090957e097179727d5625e6879c2003003ff0fe3.json  query-a6bc945670372ec5fe074f47dce53588a6dcbc6700c4ec47efb2bdd996a8cbdb.json  query-e3c1117ad2024d7068f9c72b5f434dcae46f62aae022cb0dceb36e5f49d07757.json
crates/ironflow/: Cargo.toml  LICENSE  README.md
crates/ironflow-macros/: Cargo.toml  README.md
crates/ironflow-macros/src/: lib.rs
crates/ironflow/.sqlx/: query-047780327d6783cc84dac811faf8dcb5ae5eea682f41faedf5d75adc3e20f488.json  query-10278d1fc70f364f2a36835b108f9d55ce040f1eb31db77b1d104c7592499723.json  query-1ce804475b8d6f37e478ffb5a82e46a4eb87ee5ea10a16e6085c38617837051d.json  query-207118b6db89bc6e8b1da99e25e5c433f956c7ae55352e0ac6c738eda443c6b4.json  query-2b9bb76fdde6ea1e21875919bdb4321beefc073e85029ab039fb5fb03665338c.json  query-310829a112ae92f0e55ec8b017c20c62e6a6668912668363a71e5947ae2b5ebf.json  query-32029f7becf58f01037f51f6d6c383faadb5cec2aa4324839a1623be0ebd16c3.json  query-383231b5c332162c01caf8cf3129ecd1df02bf95271a7b28a30afc757c347924.json  query-41ffbf58f14a2cd473efb89e6a1e804c723b525ecc79a6c118fae574511575a5.json  query-709d50747ebaa89055f55302df0e434f6a9048c55ac83e9deacfba77985e51d7.json  query-82d3959691a1c960c63f06e0a5457a4330ab48725cb989dcff1e6c6d860bff2c.json  query-895f5f82f4b4898751c6f7f7ff8eaebc92f24aed19ce331a00250236cb08cf3c.json  query-8e1e67f05227afe4fdd00786ca449d1fe2246d1c110c51dfe09729b8688f43d7.json  query-9055f535886dd47d04f998db467d498cbb713aceb790b46f25469146602ff8c8.json  query-93ffa52b61ccec77bea41c765116e77aedda9bc43d46bff27cfd3a3772c8b5a8.json  query-9d056cc569eb95609059073ebaed7205ea0a11018fcf74da0177462319129da4.json  query-9e70b13c7e8b3f219e20377cafc4fd744cfa13cff2788ab85cee2bbb50d631bd.json  query-a1377f553634128747d325c59269c910784c2749ebbb4121eb8bc404cd020cb8.json  query-db0b34a57f8ddca1f1444e8ebcac5d38c3a75f6e22a6d140bbbdadabe21438f7.json  query-dbcc3359a6b63e5f7d7f74a399617c9c336c911084dcc9b553d21239956e947d.json  query-e88da8d44c90cc27282660f9660c6a23787d1a4957ea89b441748099f1df9be5.json  query-f228a6729d929bf72f62739da4d5235324a846b1aa7d96290d5fe84cd80b09d5.json  query-f4ffc45b3006bdf12afdc919c6d1e1b2ea8c0195a7b56a9fc4472f2c3fa0a032.json
crates/ironflow/migrations/: 20251230000001_create_ironflow_schema.sql
crates/ironflow/src/: decider.rs  engine.rs  error.rs  lib.rs  projection.rs  service.rs  timer.rs  visualization.rs  workflow.rs
crates/ironflow/src/effect/: context.rs  handler.rs  mod.rs  retry.rs
crates/ironflow/src/runtime/: config.rs  effect_worker.rs  mod.rs  registry.rs  timer_worker.rs
crates/ironflow/src/store/: mod.rs  outbox.rs  postgres.rs
crates/ironflow/tests/postgres/: README.md  e2e.rs  main.rs  runtime.rs  service.rs  store.rs
crates/ironflow/tests/postgres/support/: db.rs  db_test.rs  helpers.rs  mod.rs
crates/ironflow/tests/postgres/support/workflows/: mod.rs  test_workflow.rs  timer_test.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: db.rs
docs/: ARCHITECTURE.md  HOWTO.md  PROJECTIONS.md  PUBLISHING.md  README.md  WORKFLOW_CORE.md
scripts/: format-md.sh  format-sql.sh  format-toml.sh  security-check.sh  spin_up_docker_services.sh  sqlx_install.sh  sqlx_migrate.sh  sqlx_prepare.sh  verify.sh
