[package]
name = "ironflow-macros"
version = "0.1.0"
edition = "2024"
authors = ["Nikita Moshenskiy"]
license = "MIT"
description = "Procedural macros for the ironflow workflow engine"
readme = "README.md"
repository = "https://github.com/sparkmill/ironflow"
homepage = "https://github.com/sparkmill/ironflow"
documentation = "https://docs.rs/ironflow-macros"
keywords = ["workflow", "macros", "derive", "ironflow", "sqlx"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
