[package]
name = "ironflow-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Procedural macros for the ironflow workflow engine"
readme = "README.md"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ironflow-macros"
keywords = ["workflow", "macros", "derive", "ironflow", "sqlx"]
rust-version.workspace = true
include = ["Cargo.toml", "README.md", "LICENSE", "src/**"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
