[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
description = "Shared test utilities for White Rabbit services"
license.workspace = true
publish = false
rust-version.workspace = true
homepage.workspace = true

[dependencies]
# Error handling
anyhow = { workspace = true }

# Time utilities
time = { workspace = true }

# Database access
sqlx = { workspace = true }

# Async runtime (required by tests)
tokio = { workspace = true }

# URL parsing for database connection strings
url = { workspace = true }

# UUID generation for unique database names
# Using v7 for time-ordered, sortable UUIDs
uuid = { workspace = true, features = ["v7"] }

# Load environment variables from .env files
dotenvy = { workspace = true }
